# ScreenUse

./: .gitignore  .screenuse-patch.part00  .screenuse-patch.part01  .screenuse-patch.part02  .screenuse-patch.part03  .screenuse-patch.part04  .screenuse-patch.part05  .screenuse-payload.part00  .screenuse-payload.part01  .screenuse-payload.part02  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
docs/: AI_PRICING.md  APP_CONTEXT_COVERAGE.md  ARCHITECTURE.md  GITHUB_SYNC.md  METADATA_FIRST.md  classification-memory-design.md
extensions/chromium/: background.js  manifest.json  media-state.js  page-context.js  page-context.test.cjs  popup.html  popup.js
extensions/vscode/: package.json  tsconfig.json
extensions/vscode/src/: extension.ts
scripts/: cargo-check.ps1  tauri-build.ps1  tauri-dev.ps1  with-msvc-rust.ps1
src/: App.tsx  api.ts  mock.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  analysis_worker.rs  autostart.rs  classification.rs  collectors.rs  context_store.rs  db.rs  export.rs  github_sync.rs  hotkeys.rs  integration_server.rs  integrations.rs  main.rs  maintenance.rs  memory.rs  models.rs  pricing.rs  secrets.rs  sleep_debt.rs
