[package]
name = "screenuse"
version = "0.2.0"
description = "Low-overhead personal activity time tracker"
authors = ["ScreenUse"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener = "2.2"
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
keyring = { version = "3.6", features = ["windows-native"] }
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tiny_http = "0.12"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_Com",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Accessibility",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_SystemInformation"
] }
